WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237999
Fix the build when LOG_DISABLED is 0 in release builds
https://bugs.webkit.org/show_bug.cgi?id=237999
Summary
Fix the build when LOG_DISABLED is 0 in release builds
Simon Fraser (smfr)
Reported
2022-03-16 21:19:16 PDT
ssia
Attachments
Patch
(1.44 KB, patch)
2022-03-16 21:20 PDT
,
Simon Fraser (smfr)
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2022-03-16 21:20:26 PDT
Created
attachment 454932
[details]
Patch
EWS
Comment 2
2022-03-17 11:56:58 PDT
Committed
r291425
(
248551@main
): <
https://commits.webkit.org/248551@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 454932
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-03-17 11:57:17 PDT
<
rdar://problem/90444646
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug