Fix the build when LOG_DISABLED is 0 in release builds https://bugs.webkit.org/show_bug.cgi?id=237999

Reviewed by Tim Horton.

* WebProcess/Plugins/PDF/PDFPlugin.h:



Canonical link: https://commits.webkit.org/248551@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291425 268f45cc-cd09-0410-ab3c-d52691b4dbfc